force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/Apttus_Config2__ProductOptionComponent__c.object-meta.xml
<CustomObject>
    <description>Represents a product option component which is a member of the list of options associated with a product.option group</description>
    <label>Product Option Component</label>
    <nameField>
        <displayFormat>PC-{0000000000}</displayFormat>
        <label>Option Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>