force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__AllowCloning__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowCloning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to display the cloning action in a sub bundle configuration</description>
    <label>Allow Cloning</label>
    <type>Checkbox</type>
</CustomField>