force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__AutoUpdateQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AutoUpdateQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto update default quantity when participants of expression change.</description>
    <inlineHelpText>Auto update default quantity when participants of expression change.</inlineHelpText>
    <label>Auto Update Quantity</label>
    <type>Checkbox</type>
</CustomField>