force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__ComponentProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ComponentProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the component product</description>
    <label>Component Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Products</relationshipLabel>
    <relationshipName>ParentProducts</relationshipName>
    <type>Lookup</type>
</CustomField>