force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__ConfigType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigType__c</fullName>
    <description>To set whether the configuration should be inline or new page</description>
    <label>Config Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inline</fullName>
                <default>true</default>
                <label>Inline</label>
            </value>
            <value>
                <fullName>New Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>