force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__Default__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the option is a default for the product.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>