force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__DefaultQuantityExpressionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultQuantityExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Quantity Expression</label>
    <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
    <relationshipLabel>Product Option Components (Default Quantity Expression)</relationshipLabel>
    <relationshipName>ProductOptionComponents2</relationshipName>
    <type>Lookup</type>
</CustomField>