force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__InclusionCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InclusionCriteria__c</fullName>
    <description>The inclusion criteria. When the inclusion criteria is met, the option component will be included in the bundle. Only applicable when the option is not already included by default.</description>
    <inlineHelpText>The inclusion criteria. When the inclusion criteria is met, the option component will be included in the bundle. Only applicable when the option is not already included by default.</inlineHelpText>
    <label>Inclusion Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>