force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__MaxQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxQuantity__c</fullName>
    <description>The maximum quantity of the option that may be selected. The quantity can be zero.</description>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>