force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__MaxQuantityExpressionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxQuantityExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Max Quantity Expression</label>
    <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
    <relationshipLabel>Product Option Components</relationshipLabel>
    <relationshipName>ProductOptionComponents</relationshipName>
    <type>Lookup</type>
</CustomField>