force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__MinQuantityExpressionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MinQuantityExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Min Quantity Expression</label>
    <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
    <relationshipLabel>Product Option Components (Min Quantity Expression)</relationshipLabel>
    <relationshipName>ProductOptionComponents1</relationshipName>
    <type>Lookup</type>
</CustomField>