force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__Modifiable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Modifiable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the option or component quantity is modifiable.</description>
    <label>Quantity Modifiable</label>
    <type>Checkbox</type>
</CustomField>