force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__ParentProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the parent product</description>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>