force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__ProductOptionGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductOptionGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product option group</description>
    <label>Product Option Group</label>
    <referenceTo>Apttus_Config2__ProductOptionGroup__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>