force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelationshipType__c</fullName>
    <description>The type of relationship between the option and the product</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Option</fullName>
                <default>true</default>
                <label>Option</label>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>