force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Apttus_Config2__Required__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the options is required have for the bundle.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>